namespace MIW.ADOO.Runtime
{
    public enum Color
    {
        None,
        X,
        O
    }
}